fix(content): alignement au contenu du bouton de la transcription

--- a/src/content/styles/_module.scss
+++ b/src/content/styles/_module.scss
@@ -32,7 +32,7 @@
   }
 
   &__transcription {
-    @include nest-link(sm, right, menu-2-fill, null, true);
+    @include nest-link(sm, right, menu-2-fill, null, true, true);
   }
 
   $medias: (#{&}__img, ns(responsive-vid));
